--- a/deco.css
+++ b/deco.css
@@ -9,12 +9,22 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: darkslategray;
 }
+
+.main_header {
+  background: url(/lib2.png);
+  width: 100%;
+  /* max-width: 1000px; */
+  height: 8rem;
+  margin: 1px 0px 0px 0px;
+  letter-spacing: 1.3rem;
+}
 h1 {
   text-align: center;
   text-transform: uppercase;
-  margin: 2rem 0;
-  font-size: 2.5rem;
-  color: aliceblue;
+  font-size: 5.5rem;
+  color: firebrick;
+  padding-top: 0.2em;
+  font-weight: bold;
 }
 
 /* Overview */
@@ -116,7 +126,49 @@ table tr td {
   border-top: 1px solid;
   border-image: linear-gradient(to left, red, blue) 1;
 }
+footer {
+  background-color: aliceblue;
+}
+.footer {
+  background-color: aliceblue;
+  width: 90%;
+  max-width: 1000px;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: space-between;
+}
+.footer_info {
+  padding-top: 15px;
+}
+.footer_info ul {
+  list-style-type: none;
+  display: flex;
+  padding-left: 15px;
+}
+.footer_info ul li {
+  padding-left: 10px;
+  font-weight: bold;
+}
 
+.footer .social ul li a img {
+  width: 40px;
+  height: 40px;
+}
+.footer .social ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.footer .social ul li {
+  padding: 5px 10px;
+}
+
+.footer_text {
+  padding: 10px 5px;
+  text-align: center;
+  text-transform: capitalize;
+  color: rgb(59, 5, 5);
+}
 @media (max-width: 767px) {
   html {
     font-size: 14px;
@@ -138,5 +190,31 @@ table tr td {
   }
   table {
     width: 100%;
+  }
+  h1 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 3rem;
+    color: rgb(17, 6, 6);
+    padding-top: 0.5em;
+    font-weight: bold;
+  }
+  .footer {
+    background-color: aliceblue;
+    width: 100%;
+    max-width: 1000px;
+    margin: 2rem auto;
+    display: block;
+    justify-content: space-between;
+  }
+  .footer .social ul {
+    display: flex;
+    list-style-type: none;
+    justify-content: space-evenly;
+    padding-bottom: 5px;
+  }
+  .footer_info ul {
+    justify-content: space-around;
+    padding-bottom: 15px;
   }
 }
